<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        style="@style/titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:fontFamily="@font/elmessiri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:boxBackgroundColor="@color/white"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_hint"
            android:fontFamily="@font/elmessiri"
            android:inputType="text"
            style="@style/editTextFildBackgroundColor"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/task_title"
        app:boxBackgroundColor="@color/white"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description_hint"
            android:fontFamily="@font/elmessiri"
            android:minLines ="4"
            android:maxLines ="4"
            android:gravity="start"
            android:inputType="textMultiLine"
            style="@style/editTextFildBackgroundColor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/task_desc"
        app:boxBackgroundColor="@color/white"
        >
        <TextView
            android:id = "@+id/task_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_date_hint"
            android:fontFamily="@font/elmessiri"
            android:gravity="start"
            android:padding="12dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/submit"
        android:fontFamily="@font/elmessiri"
        app:tint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/task_date"

        />
</androidx.constraintlayout.widget.ConstraintLayout>