<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.edit.EditTaskActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/blue"
        android:contentDescription="@string/color_blue_content_discreption"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/todo_list"
        android:paddingStart="30dp"
        android:paddingTop="50dp"
        android:fontFamily="@font/elmessiri"
        style="@style/toolBarTitle"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="110dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/edit_task_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        app:layout_constraintWidth_percent="0.88"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/cardBackgroundColor"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            >

            <TextView
                android:id="@+id/edit_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_task"
                android:padding="20dp"
                style="@style/calendarHeaderStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_title_text_fild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_tv"
                app:boxBackgroundColor="@color/white"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_title_hint"
                    android:fontFamily="@font/elmessiri"
                    style="@style/editTextFildBackgroundColor"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/task_title_text_fild"
                app:boxBackgroundColor="@color/white"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_description_hint"
                    android:fontFamily="@font/elmessiri"
                    android:minLines ="4"
                    android:maxLines ="4"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    style="@style/editTextFildBackgroundColor"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/task_desc"
                app:boxBackgroundColor="@color/white"
                >
                <TextView
                    android:id = "@+id/task_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_date"
                    android:fontFamily="@font/elmessiri"
                    android:gravity="start"
                    android:padding="12dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/PrimaryButton"
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/submit"
                android:fontFamily="@font/elmessiri"
                app:tint="@color/blue"
                app:layout_constraintTop_toBottomOf="@id/task_date"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>